include/epanet2.h

/********************************************************************

    Nodal Demand Functions

********************************************************************/

  int DLLEXPORT ENgetdemandmodel(int *model, EN_API_FLOAT_TYPE *pmin,
                EN_API_FLOAT_TYPE *preq, EN_API_FLOAT_TYPE *pexp);
  int DLLEXPORT ENsetdemandmodel(int model, EN_API_FLOAT_TYPE pmin,
                EN_API_FLOAT_TYPE preq, EN_API_FLOAT_TYPE pexp);
  int DLLEXPORT ENadddemand(int nodeIndex, EN_API_FLOAT_TYPE baseDemand,
                char *demandPattern, char *demandName);
  int DLLEXPORT ENdeletedemand(int nodeIndex, int demandIndex);
  
  int DLLEXPORT ENgetnumdemands(int nodeIndex, int *numDemands);
  int DLLEXPORT ENgetdemandindex(int nodeIndex, char *demandName, int *demandIndex);
  int DLLEXPORT ENgetbasedemand(int nodeIndex, int demandIndex,
                EN_API_FLOAT_TYPE *baseDemand);
  int DLLEXPORT ENsetbasedemand(int nodeIndex, int demandIndex,
                EN_API_FLOAT_TYPE baseDemand);
  int DLLEXPORT ENgetdemandpattern(int nodeIndex, int demandIndex, int *patIndex);
  int DLLEXPORT ENsetdemandpattern(int nodeIndex, int demandIndex, int patIndex);
  int DLLEXPORT ENgetdemandname(int nodeIndex, int demandIndex, char *demandName);
  int DLLEXPORT ENsetdemandname(int nodeIndex, int demandIndex, char *demandName);
/********************************************************************

    Link Functions

********************************************************************/

  int DLLEXPORT ENaddlink(char *id, int linkType, char *fromNode, char *toNode, int *index);
  int DLLEXPORT ENdeletelink(int index, int actionCode);
  int DLLEXPORT ENgetlinkindex(char *id, int *index);
  int DLLEXPORT ENgetlinkid(int index, char *id);
  int DLLEXPORT ENsetlinkid(int index, char *newid);
  int DLLEXPORT ENgetlinktype(int index, int *linkType);
  int DLLEXPORT ENsetlinktype(int *index, int linkType, int actionCode);
  int DLLEXPORT ENgetlinknodes(int index, int *node1, int *node2);
  int DLLEXPORT ENsetlinknodes(int index, int node1, int node2);
  int DLLEXPORT ENgetlinkvalue(int index, int property, EN_API_FLOAT_TYPE *value);
  int DLLEXPORT ENsetlinkvalue(int index, int property, EN_API_FLOAT_TYPE value);
  int DLLEXPORT ENsetpipedata(int index, EN_API_FLOAT_TYPE length,
                EN_API_FLOAT_TYPE diam, EN_API_FLOAT_TYPE rough,
                EN_API_FLOAT_TYPE mloss);
                
  int DLLEXPORT ENgetvertexcount(int index, int *count);
  
  int DLLEXPORT ENgetvertex(int index, int vertex, double *x, double *y);
  
  int DLLEXPORT ENsetvertices(int index, double *x, double *y, int count);
/********************************************************************

    Pump Functions

********************************************************************/

  int DLLEXPORT ENgetpumptype(int linkIndex, int *pumpType);
  int DLLEXPORT ENgetheadcurveindex(int linkIndex, int *curveIndex);
  int DLLEXPORT ENsetheadcurveindex(int linkIndex, int curveIndex);
/********************************************************************

    Time Pattern Functions

********************************************************************/

  int DLLEXPORT ENaddpattern(char *id);
  int DLLEXPORT ENdeletepattern(int index);
  int DLLEXPORT ENgetpatternindex(char *id, int *index);
  int DLLEXPORT ENgetpatternid(int index, char *id);
  int DLLEXPORT ENsetpatternid(int index, char *id);
  int DLLEXPORT ENgetpatternlen(int index, int *len);
  int DLLEXPORT ENgetpatternvalue(int index, int period, EN_API_FLOAT_TYPE *value);
  int DLLEXPORT ENsetpatternvalue(int index, int period, EN_API_FLOAT_TYPE value);
  int DLLEXPORT ENgetaveragepatternvalue(int index, EN_API_FLOAT_TYPE *value);
  int DLLEXPORT ENsetpattern(int index, EN_API_FLOAT_TYPE *values, int len);
/********************************************************************

    Data Curve Functions

********************************************************************/

  int DLLEXPORT ENaddcurve(char *id);
  int DLLEXPORT ENdeletecurve(int index);
  int DLLEXPORT ENgetcurveindex(char *id, int *index);
  int DLLEXPORT ENgetcurveid(int index, char *id);
  int DLLEXPORT ENsetcurveid(int index, char *id);
  int DLLEXPORT ENgetcurvelen(int index, int *len);
  int DLLEXPORT ENgetcurvetype(int index, int *type);
  int DLLEXPORT ENgetcurvevalue(int curveIndex, int pointIndex,
                EN_API_FLOAT_TYPE *x, EN_API_FLOAT_TYPE *y);
  int DLLEXPORT ENsetcurvevalue(int curveIndex, int pointIndex,
                EN_API_FLOAT_TYPE x, EN_API_FLOAT_TYPE y);
  int DLLEXPORT ENgetcurve(int index, char* id, int *nPoints,
                EN_API_FLOAT_TYPE *xValues, EN_API_FLOAT_TYPE *yValues);
  int DLLEXPORT ENsetcurve(int index, EN_API_FLOAT_TYPE *xValues,
                EN_API_FLOAT_TYPE *yValues, int nPoints);
/********************************************************************

    Simple Controls Functions

********************************************************************/

  int DLLEXPORT ENaddcontrol(int type, int linkIndex, EN_API_FLOAT_TYPE setting,
                int nodeIndex, EN_API_FLOAT_TYPE level, int *index);
  int DLLEXPORT ENdeletecontrol(int index);
  int DLLEXPORT ENgetcontrol(int index, int *type, int *linkIndex,
                EN_API_FLOAT_TYPE *setting, int *nodeIndex, EN_API_FLOAT_TYPE *level);
  int DLLEXPORT ENsetcontrol(int index, int type, int linkIndex,
                EN_API_FLOAT_TYPE setting, int nodeIndex, EN_API_FLOAT_TYPE level);
/********************************************************************

    Rule-Based Controls Functions

********************************************************************/

  int DLLEXPORT ENaddrule(char *rule);
  int DLLEXPORT ENdeleterule(int index);
  int DLLEXPORT ENgetrule(int index, int *nPremises, int *nThenActions,
                int *nElseActions, EN_API_FLOAT_TYPE *priority);
  int DLLEXPORT ENgetruleID(int index, char* id);
  int DLLEXPORT ENgetpremise(int ruleIndex, int premiseIndex, int *logop,
                int *object, int *objIndex, int *variable,
                int *relop, int *status, EN_API_FLOAT_TYPE *value);
  int DLLEXPORT ENsetpremise(int ruleIndex, int premiseIndex, int logop,
                int object, int objIndex, int variable, int relop,
                int status, EN_API_FLOAT_TYPE value);
  int DLLEXPORT ENsetpremiseindex(int ruleIndex, int premiseIndex, int objIndex);
  int DLLEXPORT ENsetpremisestatus(int ruleIndex, int premiseIndex, int status);
  int DLLEXPORT ENsetpremisevalue(int ruleIndex, int premiseIndex,
                EN_API_FLOAT_TYPE value);
  int DLLEXPORT ENgetthenaction(int ruleIndex, int actionIndex, int *linkIndex,
                int *status, EN_API_FLOAT_TYPE *setting);
  int DLLEXPORT ENsetthenaction(int ruleIndex, int actionIndex, int linkIndex,
                int status, EN_API_FLOAT_TYPE setting);
  int DLLEXPORT ENgetelseaction(int ruleIndex, int actionIndex, int *linkIndex,
                int *status, EN_API_FLOAT_TYPE *setting);
  int DLLEXPORT ENsetelseaction(int ruleIndex, int actionIndex, int linkIndex,
                int status, EN_API_FLOAT_TYPE setting);
  
  int DLLEXPORT ENsetrulepriority(int index, EN_API_FLOAT_TYPE priority);